# heterogeneous_federated_learning_with_conditional_variational_autoencoder

./: .gitignore  LICENSE  README.md  metadata.json  model_calibration.ipynb  model_calibration.py  pre_flwr_run.py  pyproject.toml  requirements.txt
analytics/: algorithm_names.json  new_results.ipynb  results.ipynb
experments/: FEDav.py  after_fl_decoder_check.py  check_gpu.py  dual_encoder_VAE.py  gan.py  model.py  pixel_cnn.py  single_encoder_VAE.py  stable_diffusion.py  vq-vae.py
model_architecture/: HFedCGAN_discriminator.onnx  HFedCVAEGAN_discriminator.onnx  discriminator.onnx  discriminator1.onnx  generator.onnx  generator1.onnx
src/: client_app.py  data_loader.py  server_app.py
src/clients/: flower_default_client.py  flower_fed_rep_client.py  flower_h_fed_cvae_client.py  flower_h_fed_pfs_client.py  flower_vae_client.py
src/ml_models/: HFedCVAE.py  HFedPVA.py  cnn.py  cvae.py  decoder.py  discriminator.py  encoder.py  gated_pixelcnn.py  generator.py  generic_encoder.py  h_fed_pfs.py  personalized_encoder.py  quantizer.py  residual.py  train_cvae.py  train_gan.py  train_h_fed_pfs.py  train_net.py  train_test_classification.py  train_test_conditional_gan_with_classification.py  train_test_conditional_vae_with_classification.py  train_vae.py  train_vae_gan.py  train_vqvae_with_pixel_cnn.py  utils.py  vae.py  vqvae.py
src/plots/: HFedCGAN_5_3_fashion_mnist_results.json  HFedCGAN_5_3_fashion_mnist_round_times.json  HFedCGAN_5_4_fashion_mnist_results.json  HFedCGAN_5_4_fashion_mnist_round_times.json  HFedCGAN_5_5_fashion_mnist_results.json  HFedCGAN_5_5_fashion_mnist_round_times.json  HFedCGAN_5_6_fashion_mnist_results.json  HFedCGAN_5_7_claudiogsc_emnist_balanced_results.json  HFedCGAN_5_7_claudiogsc_emnist_balanced_round_times.json  HFedCGAN_5_7_fashion_mnist_round_times.json  HFedCGAN_5_8_fashion_mnist_round_times.json  HFedCGAN_5_mnist_results.json  HFedCGAN_5_mnist_round_times.json  HFedCVAEGAN_5_10_cifar10_results.json  HFedCVAEGAN_5_10_cifar10_round_times.json  HFedCVAEGAN_5_10_fashion_mnist_results.json  HFedCVAEGAN_5_10_fashion_mnist_round_times.json  HFedCVAEGAN_5_1_cifar10_results.json  HFedCVAEGAN_5_1_cifar10_round_times.json  HFedCVAEGAN_5_1_fashion_mnist_results.json  HFedCVAEGAN_5_1_fashion_mnist_round_times.json  HFedCVAEGAN_5_2_fashion_mnist_round_times.json  HFedCVAEGAN_5_3_fashion_mnist_results.json  HFedCVAEGAN_5_47_claudiogsc_emnist_balanced_results.json  HFedCVAEGAN_5_47_claudiogsc_emnist_balanced_round_times.json  HFedCVAEGAN_5_5_fashion_mnist_round_times.json  HFedCVAEGAN_5_6_fashion_mnist_results.json  HFedCVAEGAN_5_7_claudiogsc_emnist_balanced_results.json  HFedCVAEGAN_5_7_claudiogsc_emnist_balanced_round_times.json  HFedCVAEGAN_5_7_fashion_mnist_results.json  HFedCVAEGAN_5_9_fashion_mnist_results.json  HFedCVAEGAN_5_mnist_results.json  HFedCVAEGAN_5_mnist_round_times.json  HFedCVAE_10_10_fashion_mnist_results.json  (+60 more)
(+114 files in other folders)
