[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heterogeneous_federated_learning_with_disentangled_variational_autoencoder"
version = "1.0.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-of-clients = 10
learning-rate = 0.001
fraction-evaluate = 1
local-epochs = 3
batch-size = 128
data-loader-alpha = 0.1
num-server-rounds = 100
prepare-dataset = false

# Paths
logs-folder-path = "log"
dataset-folder-path = "src/clients_dataset"
plots-folder-path = "src/plots"

# Dataset and Model Configuration
dataset-name = "mnist"
dataset-input-feature = "image"
dataset-target-feature = "label"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 5 ClientApp will run in a given GPU

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-docstring"]
