[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heterogeneous_federated_learning_with_disentangled_variational_autoencoder"
version = "1.0.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-of-clients = 5
net-learning-rate = 0.001
fraction-evaluate = 1
net-epochs = 3
vae-epochs = 12
batch-size = 64
data-loader-alpha = 0.1
num-server-rounds = 1
vae-scale-multiplier = 1.0
prepare-dataset = false
# cnn1, cnn2, cnn3, cnn4, cnn5
cnn-type = "cnn5"
# HFedCVAE, HFedCGAN, HFedCVAEGAN, default, 
mode = "HFedCVAE"
num-class-learn-per-round = 10

# Paths
logs-folder-path = "log"
dataset-folder-path = "src/clients_dataset"
plots-folder-path = "src/plots"
model-folder-path = "src/clients_models"

# Dataset and Model Configuration - mnist, fashion_mnist, cifar10(dataset-input-feature=img)
dataset-name = "mnist"
dataset-input-feature = "image"
dataset-target-feature = "label"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 5
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 5 ClientApp will run in a given GPU

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-docstring"]
